--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest run"
   },
   "devDependencies": {
-    "vite": "^5.4.2"
+    "jsdom": "^26.1.0",
+    "vite": "^5.4.2",
+    "vitest": "^3.2.4"
   }
 }
