Refactor: Replace Next.js app with Stock Analysis Agent implementation

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,19 @@ dist-ssr
 *.sln
 *.sw?
 .env
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+.venv/
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Project specific
+artifacts/
+agent_memory.json
