--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ pydantic-settings
 python-dotenv
 pytest
 requests
+yfinance
+duckduckgo-search
 
 # MCP (Model Context Protocol) Integration
 # Install with: pip install 'mcp[cli]'
 # Or for just the core library: pip install mcp
-mcp[cli]>=1.0.0
+# mcp[cli]>=1.0.0
