--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,6 +35,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
+      - name: Install Dependencies
+        run: pip install Pillow
       - name: Generate Gallery Manifest
         run: python3 scripts/generate_gallery.py
       - name: Setup Pages
